tests/ui/impl-trait/issues/issue-79099.edition2024.stderr
error[E0562]: `impl Trait` is not allowed in the type of variable bindings
  --> $DIR/issue-79099.rs:6:16
   |
LL |         let f: impl core::future::Future<Output = u8> = async { 1 };
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information
   = help: add `#![feature(impl_trait_in_bindings)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0562`.
